Combined starfield & image divs
• Combined .starfield divs and the .image divs into a single div.
• Changed .image CSS selectors under starfields to `&.image, & .image` in order to apply to either a contained .image (as it was) or .image on the starfield itself (as it is now).
	• Using `&:extend(.starfield all)` to properly inherit all `.starfield` and `.starfield … .image` CSS w/o including it twice.
• Changed all starfield animation keyframes to start at `_sky_phase_start` and end at `_sky_phase_end`.
	• Changed opacity easing types to `linear` or the new `linearStartToMid` and `linearMidToEnd` in order to preserve starfields appearing halfway through or becoming fully opaque by halfway, without affecting the movement animation.
		» linearMidToEnd could be wasteful here, since there's no reason to animate the movement when it's not visible, but it probably won't be a big deal so I'll optimize it later if need be.
	• Added `linearStartToMid` and `linearMidToEnd` easing functions to the skrollr config, the former which returns 0 at or under halfway, and lerps the other half, and the latter which lerps the first half and returns 1.0 for the other half.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <section id="sky-phase" class="vh-200">
 	<div class="back fixed">
 		<div class="back fill"></div>
-		<div id="starfield1" class="back"><div class="back image"></div></div>
-		<div id="starfield2" class="back"><div class="back image"></div></div>
-		<div id="starfield3" class="back"><div class="back image"></div></div>
-		<div id="starfield4" class="back"><div class="back image"></div></div>
+		<div id="starfield1" class="back image"></div>
+		<div id="starfield2" class="back image"></div>
+		<div id="starfield3" class="back image"></div>
+		<div id="starfield4" class="back image"></div>
 	</div>
 	
 	<div class="container vh-100">
@@ -187,6 +187,18 @@ var $s = skrollr.init({
 	forceHeight: false,
 	smoothScrolling: false,
 	easing: {
+		linearMidToEnd: function (p) {
+			if (p <= 0.5)
+				return 0.0;
+			else
+				return (p - 0.5) * 2;
+		},
+		linearStartToMid: function (p) {
+			if (p < 0.5)
+				return p * 2;
+			else
+				return 1.0;
+			},
 		accelDecel: accelDecelSkrollrEasing
 	},
 	constants: {
