New colors for the sky
• New colors `@sky-eve-top`, `…-mid`, and `…-bottom` for the starting gradient of the sky.
	» `…-top` and `-bottom` are specific RGB values.
	» `…-mid` is the `overlay()` result of the top and bottom, because it thought it looked nice.
	• `@sky-eve-top-mid`/`-bottom-mid` provide averaged (mixed 50/50) quarter-points, in case we need them.
• New colors `@sky-night-top`, `…-mid`, and `…-bottom` for the ending gradient of the sky.
	» Based on `@…-pure` colors, but proportionally darkened via `multiply()` calls, since the “pure” colors were a bit bright.
	• `@sky-night-top-pure`, `…-mid-pure`, and `…-bottom-pure` are colors I like, specified with RGB values.
	• `@sky-night-top-mid`/`-bottom-mid` provide averaged (mixed 50/50) quarter-points, in case we need them.
• Added two new rows to `test/color-swatches.html` for the 5 `sky-eve-…` and 5 `sky-night-…` colors.

--- a/test/color-swatches.html
+++ b/test/color-swatches.html
@@ -215,6 +215,52 @@
 			</div>
 		</div>
 		
+		<div class="row sky-eve-mid">
+			<div class="col-xs-6 on-left">
+				<div class="color-swatches">
+					<small>@sky-eve-top/-mid/-bottom</small>
+					<div class="color-swatch sky-eve-top"></div>
+					<div class="color-swatch sky-eve-top-mid"></div>
+					<div class="color-swatch sky-eve-mid"></div>
+					<div class="color-swatch sky-eve-bottom-mid"></div>
+					<div class="color-swatch sky-eve-bottom"></div>
+				</div>
+			</div>
+			<div class="col-xs-6 on-right">
+				<div class="color-swatches">
+					<small>@sky-eve-top/-mid/-bottom</small>
+					<div class="color-swatch sky-eve-top"></div>
+					<div class="color-swatch sky-eve-top-mid"></div>
+					<div class="color-swatch sky-eve-mid"></div>
+					<div class="color-swatch sky-eve-bottom-mid"></div>
+					<div class="color-swatch sky-eve-bottom"></div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="row sky-night-mid">
+			<div class="col-xs-6 on-left">
+				<div class="color-swatches">
+					<small>@sky-night-top/-mid/-bottom</small>
+					<div class="color-swatch sky-night-top"></div>
+					<div class="color-swatch sky-night-top-mid"></div>
+					<div class="color-swatch sky-night-mid"></div>
+					<div class="color-swatch sky-night-bottom-mid"></div>
+					<div class="color-swatch sky-night-bottom"></div>
+				</div>
+			</div>
+			<div class="col-xs-6 on-right">
+				<div class="color-swatches">
+					<small>@sky-night-top/-mid/-bottom</small>
+					<div class="color-swatch sky-night-top"></div>
+					<div class="color-swatch sky-night-top-mid"></div>
+					<div class="color-swatch sky-night-mid"></div>
+					<div class="color-swatch sky-night-bottom-mid"></div>
+					<div class="color-swatch sky-night-bottom"></div>
+				</div>
+			</div>
+		</div>
+		
 	</div>
 
 </div><!-- wrapper -->
