Fix: Added `on-dark`/`-light` classes to color-swatches.html
• Added `on-dark` and `on-light` classes to each of the `col-…` divs in `color-swatches.html`.
	» The ones already with `on-left` got `on-dark` and the ones with `on-right` got `on-light.
	» I thought these were already on here.  Unsure why I removed them.  Hmm.

--- a/test/color-swatches.html
+++ b/test/color-swatches.html
@@ -32,7 +32,7 @@
 		<h1>Test: Color Swatches</h1>
 		
 		<div class="row blue">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@blue</small>
 					<div class="color-swatch blue-darker"></div>
@@ -42,7 +42,7 @@
 					<div class="color-swatch blue-lighter"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@blue</small>
 					<div class="color-swatch blue-darker"></div>
@@ -55,7 +55,7 @@
 		</div>
 		
 		<div class="row cobalt">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@cobalt</small>
 					<div class="color-swatch cobalt-darker"></div>
@@ -65,7 +65,7 @@
 					<div class="color-swatch cobalt-lighter"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@cobalt</small>
 					<div class="color-swatch cobalt-darker"></div>
@@ -78,7 +78,7 @@
 		</div>
 		
 		<div class="row cyan">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@cyan</small>
 					<div class="color-swatch cyan-darker"></div>
@@ -88,7 +88,7 @@
 					<div class="color-swatch cyan-lighter"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@cyan</small>
 					<div class="color-swatch cyan-darker"></div>
@@ -101,7 +101,7 @@
 		</div>
 		
 		<div class="row green">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@green</small>
 					<div class="color-swatch green-darker"></div>
@@ -111,7 +111,7 @@
 					<div class="color-swatch green-lighter"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@green</small>
 					<div class="color-swatch green-darker"></div>
@@ -124,7 +124,7 @@
 		</div>
 		
 		<div class="row orange">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@orange</small>
 					<div class="color-swatch orange-darker"></div>
@@ -134,7 +134,7 @@
 					<div class="color-swatch orange-lighter"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@orange</small>
 					<div class="color-swatch orange-darker"></div>
@@ -147,7 +147,7 @@
 		</div>
 		
 		<div class="row purple">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@purple</small>
 					<div class="color-swatch purple-darker"></div>
@@ -157,7 +157,7 @@
 					<div class="color-swatch purple-lighter"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@purple</small>
 					<div class="color-swatch purple-darker"></div>
@@ -170,7 +170,7 @@
 		</div>
 		
 		<div class="row teal">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@teal</small>
 					<div class="color-swatch teal-darker"></div>
@@ -180,7 +180,7 @@
 					<div class="color-swatch teal-lighter"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@teal</small>
 					<div class="color-swatch teal-darker"></div>
@@ -193,7 +193,7 @@
 		</div>
 		
 		<div class="row yellow">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@yellow</small>
 					<div class="color-swatch yellow-darker"></div>
@@ -203,7 +203,7 @@
 					<div class="color-swatch yellow-lighter"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@yellow</small>
 					<div class="color-swatch yellow-darker"></div>
@@ -216,7 +216,7 @@
 		</div>
 		
 		<div class="row sky-eve-mid">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@sky-eve-top/-mid/-bottom</small>
 					<div class="color-swatch sky-eve-top"></div>
@@ -226,7 +226,7 @@
 					<div class="color-swatch sky-eve-bottom"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@sky-eve-top/-mid/-bottom</small>
 					<div class="color-swatch sky-eve-top"></div>
@@ -239,7 +239,7 @@
 		</div>
 		
 		<div class="row sky-night-mid">
-			<div class="col-xs-6 on-left">
+			<div class="col-xs-6 on-dark on-left">
 				<div class="color-swatches">
 					<small>@sky-night-top/-mid/-bottom</small>
 					<div class="color-swatch sky-night-top"></div>
@@ -249,7 +249,7 @@
 					<div class="color-swatch sky-night-bottom"></div>
 				</div>
 			</div>
-			<div class="col-xs-6 on-right">
+			<div class="col-xs-6 on-light on-right">
 				<div class="color-swatches">
 					<small>@sky-night-top/-mid/-bottom</small>
 					<div class="color-swatch sky-night-top"></div>
