sky_phase_start_before for iOS bounce-scrolling
• Made each starfields' @initialScrollOffsetFactor negative by 20% of the @endScrollOffsetFactor.
	» So that the starfield still parallaxes when scrolling above the 0 mark via iOS's bounce-scrolling.
	• Intermediate `@scrollOffsetFactor` var in each `#starfield*` used with math for the `@initialScrollOffsetFactor` and directly for the `@endScrollOffsetFactor`.

--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@ var $s = skrollr.init({
 		accelDecel: accelDecelSkrollrEasing
 	},
 	constants: {
+		sky_phase_start_before: function () {
+			var box = $skyPhaseElement.getBoundingClientRect();
+			var boxHeight = box.bottom - box.top; // for IE-compat
+			return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'top') - (boxHeight * 0.20);
+		},
 		sky_phase_start: function () { return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'top'); },
 		sky_phase_center: function () { return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'center'); },
 		sky_phase_end: function () { return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'bottom'); },
