--- a/index.html
+++ b/index.html
@@ -181,6 +181,109 @@ cacheIdElement('sky-phase');
 cacheIdElement('ambitions-phase');
 cacheIdElement('title-phase');
 
+
+Math.HalfPI = Math.PI * 0.5;
+
+function easeInQuad(t) {
+	return t * t;
+}
+function easeOutQuad(t) {
+	return -(t * (t - 2));
+}
+function easeInOutQuad(t) {
+	t *= 2;
+	if (t < 1)
+		return 0.5 * t * t;
+	--t;
+	return -0.5 * (t * (t - 2) - 1);
+}
+function easeInCubic(t) {
+	return t * t * t;
+}
+function easeOutCubic(t) {
+	t -= 1;
+	return t * t * t + 1;
+}
+function easeInOutCubic(t) {
+	t *= 2;
+	if (t < 1)
+		return 0.5 * t * t * t;
+	t -= 2;
+	return 0.5 * (t * t * t + 2);
+}
+function easeInQuart(t) {
+	return t * t * t * t;
+}
+function easeOutQuart(t) {
+	t -= 1;
+	return -(t * t * t * t - 1);
+}
+function easeInOutQuart(t) {
+	t *= 2;
+	if (t < 1)
+		return 0.5 * t * t * t * t;
+	t -= 2;
+	return -0.5 * (t * t * t * t - 2);
+}
+function easeInQuint(t) {
+	return t * t * t * t * t;
+}
+function easeOutQuint(t) {
+	t -= 1;
+	return t * t * t * t * t + 1;
+}
+function easeInOutQuint(t) {
+	t *= 2;
+	if (t < 1)
+		return 0.5 * t * t * t * t * t;
+	t -= 2;
+	return 0.5 * (t * t * t * t * t + 2);
+}
+function easeInSine(t) {
+	return -(Math.cos(t * Math.HalfPI) + 1);
+}
+function easeOutSine(t) {
+	return Math.sin(t * Math.HalfPI);
+}
+function easeInOutSine(t) {
+	return -0.5 * (Math.cos(Math.PI * t) - 1);
+}
+function easeInExpo(t) {
+	if (t == 0)
+		return 0;
+	return Math.pow(2, 10 * (t - 1));
+}
+function easeOutExpo(t) {
+	if (t == 1)
+		return 1;
+	return (-Math.pow(2, -10 * t) + 1);
+}
+function easeInOutExpo(t) {
+	if (t == 0)
+		return 0;
+	if (t == 1)
+		return 1;
+	t *= 2;
+	if (t < 1)
+		return 0.5 * Math.pow(2, 10 * (t - 1));
+	--t;
+	return 0.5 * (-Math.pow(2, -10 * t) + 2);
+}
+function easeInCirc(t) {
+	return -(Math.sqrt(1 - t * t) - 1);
+}
+function easeOutCirc(t) {
+	t -= 1;
+	return Math.sqrt(1 - t * t);
+}
+function easeInOutCirc(t) {
+	t *= 2;
+	if (t < 1)
+		return -0.5 * (Math.sqrt(1 - t * t) - 1);
+	t -= 2;
+	return 0.5 * (Math.sqrt(1 - t * t) + 1);
+}
+
 var $s = skrollr.init({
 	mobileCheck: function () { return false; },
 	edgeStrategy: 'ease',
@@ -199,7 +302,28 @@ var $s = skrollr.init({
 			else
 				return 1.0;
 			},
-		accelDecel: accelDecelSkrollrEasing
+		accelDecel: accelDecelSkrollrEasing,
+		inQuad: easeInQuad,
+		outQuad: easeOutQuad,
+		inOutQuad: easeInOutQuad,
+		inCubic: easeInCubic,
+		outCubic: easeOutCubic,
+		inOutCubic: easeInOutCubic,
+		inQuart: easeInQuart,
+		outQuart: easeOutQuart,
+		inOutQuart: easeInOutQuart,
+		inQuint: easeInQuint,
+		outQuint: easeOutQuint,
+		inOutQuint: easeInOutQuint,
+		inSine: easeInSine,
+		outSine: easeOutSine,
+		inOutSine: easeInOutSine,
+		inExpo: easeInExpo,
+		outExpo: easeOutExpo,
+		inOutExpo: easeInOutExpo,
+		inCirc: easeInCirc,
+		outCirc: easeOutCirc,
+		inOutCirc: easeInOutCirc,
 	},
 	constants: {
 		sky_phase_start_before: function () {
