--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 
 
 <section id="sky-phase" class="line-height-rel">
-	<div class="back fixed">
-		<div class="back fill"></div>
-		<div id="starfield1" class="back image"></div>
-		<div id="starfield2" class="back image"></div>
-		<div id="starfield3" class="back image"></div>
-		<div id="starfield4" class="back image"></div>
+	<div class="back clip">
+		<div class="back fixed">
+			<div class="back fill"></div>
+			<div id="starfield1" class="back image"></div>
+			<div id="starfield2" class="back image"></div>
+			<div id="starfield3" class="back image"></div>
+			<div id="starfield4" class="back image"></div>
+		</div>
 	</div>
 	
 	<div class="container vh-100">
