--- a/index.html
+++ b/index.html
@@ -33,19 +33,25 @@
 	</div>
 	
 	<div class="container vh-100">
-		<div class="monologue">Oh, there you are.  I missed you.</div>
-	</div>
-	<div class="container vh-50">
-		<div class="monologue">
-			You know what I've been thinking a lot about lately?<br>
-			The stars.
+		<div class="vert-middle-block">
+			<div class="monologue">Oh, there you are.  I missed you.</div>
 		</div>
 	</div>
 	<div class="container vh-50">
-		<div class="monologue">
-			The constellations were named by the ancient Greeks…<br>
-			and those stars are still there,<br>
-			as bright as they always have been.
+		<div class="vert-middle-block">
+			<div class="monologue">
+				You know what I've been thinking a lot about lately?<br>
+				The stars.
+			</div>
+		</div>
+	</div>
+	<div class="container vh-50">
+		<div class="vert-middle-block">
+			<div class="monologue">
+				The constellations were named by the ancient Greeks…<br>
+				and those stars are still there,<br>
+				as bright as they always have been.
+			</div>
 		</div>
 	</div>
 </section>
@@ -53,21 +59,27 @@
 	<div class="back fill"></div>
 	
 	<div class="container vh-50">
-		<div class="monologue">
-			I want to leave my mark somehow, so no one ever forgets my dream:<br>
-			To shine like a star, A dazzling light, Against a cold backdrop.
+		<div class="vert-middle-block">
+			<div class="monologue">
+				I want to leave my mark somehow, so no one ever forgets my dream:<br>
+				To shine like a star, A dazzling light, Against a cold backdrop.
+			</div>
 		</div>
 	</div>
 	<div class="container vh-50">
-		<div class="monologue">
-			my story:<br>
-			Fulfilling my dreams of skating not just for myself but for everyone.
+		<div class="vert-middle-block">
+			<div class="monologue">
+				my story:<br>
+				Fulfilling my dreams of skating not just for myself but for everyone.
+			</div>
 		</div>
 	</div>
 	<div class="container vh-50">
-		<div class="monologue">
-			my constellation:<br>
-			My mark on this lake, my canvas, my piece of the world.
+		<div class="vert-middle-block">
+			<div class="monologue">
+				my constellation:<br>
+				My mark on this lake, my canvas, my piece of the world.
+			</div>
 		</div>
 	</div>
 </section>
@@ -75,8 +87,12 @@
 	<div class="back fill"></div>
 	
 	<div class="container vh-100">
-		<div class="">Lacquer: From Dreams To Ice</div>
-		<div class="">Leave your mark this winter.</div>
+		<div class="vert-middle-block">
+			<div class="inner">
+				<div class="">Lacquer: From Dreams To Ice</div>
+				<div class="">Leave your mark this winter.</div>
+			</div>
+		</div>
 	</div>
 </section>
 
