--- a/index.html
+++ b/index.html
@@ -472,20 +472,25 @@ var $s = skrollr.init({
 		inOutCirc1stQuarterTo3rdQuarter: function (p) { return easeInOutCirc(lerp1stQuarterTo3rdQuarter(p)); },
 	},
 	constants: {
-		sky_phase_start_before: function () {
+		sky_phase_open_before: function () {
 			var box = $skyPhaseElement.getBoundingClientRect();
 			var boxHeight = box.bottom - box.top; // for IE-compat
 			return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'top') - (boxHeight * 0.20);
 		},
-		sky_phase_start: function () { return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'top'); },
+		sky_phase_open: function () { return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'top'); },
 		sky_phase_center: function () { return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'center'); },
-		sky_phase_end: function () { return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'bottom'); },
-		ambitions_phase_start: function () { return skrollr.get().relativeToAbsolute($ambitionsPhaseElement, 'bottom', 'top'); },
+		sky_phase_close: function () { return skrollr.get().relativeToAbsolute($skyPhaseElement, 'bottom', 'bottom'); },
+		sky_phase_disappear: function () { return skrollr.get().relativeToAbsolute($skyPhaseElement, 'top', 'bottom'); },
+		ambitions_phase_appear: function () { return skrollr.get().relativeToAbsolute($ambitionsPhaseElement, 'bottom', 'top'); },
+		ambitions_phase_open: function () { return skrollr.get().relativeToAbsolute($ambitionsPhaseElement, 'top', 'top'); },
 		ambitions_phase_center: function () { return skrollr.get().relativeToAbsolute($ambitionsPhaseElement, 'center', 'center'); },
-		ambitions_phase_end: function () { return skrollr.get().relativeToAbsolute($ambitionsPhaseElement, 'top', 'bottom'); },
-		title_phase_start: function () { return skrollr.get().relativeToAbsolute($titlePhaseElement, 'bottom', 'top'); },
+		ambitions_phase_close: function () { return skrollr.get().relativeToAbsolute($ambitionsPhaseElement, 'bottom', 'bottom'); },
+		ambitions_phase_disappear: function () { return skrollr.get().relativeToAbsolute($ambitionsPhaseElement, 'top', 'bottom'); },
+		title_phase_appear: function () { return skrollr.get().relativeToAbsolute($titlePhaseElement, 'bottom', 'top'); },
+		title_phase_open: function () { return skrollr.get().relativeToAbsolute($titlePhaseElement, 'top', 'top'); },
 		title_phase_center: function () { return skrollr.get().relativeToAbsolute($titlePhaseElement, 'center', 'center'); },
-		title_phase_end: function () { return skrollr.get().relativeToAbsolute($titlePhaseElement, 'top', 'bottom'); },
+		title_phase_close: function () { return skrollr.get().relativeToAbsolute($titlePhaseElement, 'bottom', 'bottom'); },
+		title_phase_disappear: function () { return skrollr.get().relativeToAbsolute($titlePhaseElement, 'top', 'bottom'); },
 	}
 });
 		</script>
