Added #lakestrip back image
• Added a `#lakestrip.back.image` div under the title-phase’s `.back.fill`.
	» Within the back fill instead of after-it-as-a-sibling because… I don’t know, fewer elements?  Maybe I should’ve done the sky-phase’s fill this way too.  I guess this is a test to make sure both approaches work on all browsers.
• New `#lakestrip {}` CSS sets up the lakestrip graphics to be used as the `background-image` for each of Boostraps media query modes (`max-width: @screen-xs-max`, `min-width: @screen-sm`, `min-width: @screen-md`, and `min-width: @screen-lg`).
	• Separate `background-repeat`/`-size`/`-position` properties set it to not repeat, be 100% width with aspect-ratio-auto height, and be position at x=0, y=50%.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 	</div>
 </section>
 <section id="title-phase" class="screen-height-rel">
-	<div class="back fill"></div>
+	<div class="back fill">
+		<div id="lakestrip" class="back image"></div>
+	</div>
 	
 	<div class="container vh-100">
 		<div class="vert-middle-block">
