Added title-phase graphics
• Added 3 “piece” divs under #title-phase’s .container: #title-logo, #title-closing, and #title-bottom.
	» Each also has an `.inner` as a direct intermediate child, to help with positioning logic.
	• `#title-logo` has a `#lacquer` img src-ing `logo_lacquer_slanted.293x164.svg`, and a `#fromdreamstoice` img src-ing `logo_fromdreamstoice_slanted.290x165.svg`.
	• `#title-closing` has a “Leave your mark this winter.” `.statement` div, and a `#stargazer` img src-ing `char_stargazer.267x139.svg`.
	• `#title-bottom` has a `#comingsoon` img src-ing `comingsoon.206x63.svg`.
• New `.statement` style uses the codystar font at 2.5× the `@font-base-size`, colored teal-darker, and with a double-white text shadow (2px blur and 5px blur).
• Bootstrap `.container`/`.container-fluid`s now position-relative in order contain all of the absolute-positioned elements within.
• New `.title-piece` CSS positions absolute, with centering code, sets up `> .inner` elements to be position-relative with 100% width/height, and children of the .inner to be position-absolute.
	» Extended by `#title-logo`, `#title-closing`, and `#title-bottom`, since they all work about the same way.
	» The base absolute-position allows each to position itself where it wants in the title-phase.
	» The `> .inner` relative-position just contains the absolute-positioning of descendents.
	» The `> .inner > *` absolute-position applies to our image and text elements: #lacquer, #fromdreamstoice, .statement, #stargazer, and #comingsoon.
	• Piece positioning:
		◦ #title-logo is positioned 5% from the top
		◦ #title-closing 68% from the top, stretching to the bottom
		◦ #title-bottom at the bottom edge
	• `#title-logo` sets a `@logoBaseWidth`/`Height` vars based on the logo’s natural size, and then runs it through a multiplier (which is intended to be different for different media queries) before setting the `width:`/`height:`.
		• The inner `#lacquer` and `#fromdreamstoice` elements turn pixel size

--- a/index.html
+++ b/index.html
@@ -89,10 +89,21 @@
 	</div>
 	
 	<div class="container vh-100">
-		<div class="vert-middle-block">
+		<div id="title-logo">
 			<div class="inner">
-				<div class="">Lacquer: From Dreams To Ice</div>
-				<div class="">Leave your mark this winter.</div>
+				<img id="lacquer" src="graphics/logo_lacquer_slanted.293x164.svg" width="293" height="164">
+				<img id="fromdreamstoice" src="graphics/logo_fromdreamstoice_slanted.290x165.svg" width="290" height="165">
+			</div>
+		</div>
+		<div id="title-closing">
+			<div class="inner">
+				<div class="statement">Leave your mark this winter.</div>
+				<img id="stargazer" src="graphics/char_stargazer.267x139.svg" width="267" height="139">
+			</div>
+		</div>
+		<div id="title-bottom">
+			<div class="inner">
+				<img id="comingsoon" src="graphics/comingsoon.206x63.svg" width="206" height="63">
 			</div>
 		</div>
 	</div>
