Split up verses to match typographic mockup
• Split up each of the chunks of `.monologue` text into `.verse` spans, matching the structure of the typographical layout mockup (`lacquergame.com-(2014-11-02-at-9-56-pm)--containers-outlined.jpg`).
	» Also re-capitalized, re-punctuated, replaced, and removed text to match.
	» No more `<br>`s.
• New `.verse` CSS rule just changes the display to block (for now).
	» Decided to use <span>s that are overriden to display as block (instead of <div>s) because the content itself is span-like— it still works and makes sense without line breaks.  What we're doing here is just making it prettier, not dealing with something that is intrinsically block-based (like page layout is).

--- a/index.html
+++ b/index.html
@@ -34,23 +34,26 @@
 	
 	<div class="container vh-100">
 		<div class="vert-middle-block">
-			<div class="monologue">Oh, there you are.  I missed you.</div>
-		</div>
-	</div>
-	<div class="container vh-75">
-		<div class="vert-middle-block">
 			<div class="monologue">
-				You know what I've been thinking a lot about lately?<br>
-				The stars.
+				<span class="verse">there you are.</span>
+				<span class="verse">I missed you.</span>
 			</div>
 		</div>
 	</div>
 	<div class="container vh-75">
 		<div class="vert-middle-block">
 			<div class="monologue">
-				The constellations were named by the ancient Greeks…<br>
-				and those stars are still there,<br>
-				as bright as they always have been.
+				<span class="verse">you know what I've been thinking a lot about lately?</span>
+				<span class="verse">the stars</span>
+			</div>
+		</div>
+	</div>
+	<div class="container vh-75">
+		<div class="vert-middle-block">
+			<div class="monologue">
+				<span class="verse">the constellations were named by the ancient Greeks…</span>
+				<span class="verse">and those stars are still there</span>
+				<span class="verse">as bright as they always have been.</span>
 			</div>
 		</div>
 	</div>
@@ -61,24 +64,30 @@
 	<div class="container vh-50">
 		<div class="vert-middle-block">
 			<div class="monologue">
-				I want to leave my mark somehow, so no one ever forgets my dream:<br>
-				To shine like a star, A dazzling light, Against a cold backdrop.
+				<span class="verse">I want to leave my mark, so no one ever forgets</span>
+				<span class="verse">my dream</span>
+				<span class="verse">to shine like a star,</span>
+				<span class="verse">a dazzling light,</span>
+				<span class="verse">against the cold expanse.</span>
 			</div>
 		</div>
 	</div>
 	<div class="container vh-50">
 		<div class="vert-middle-block">
 			<div class="monologue">
-				my story:<br>
-				Fulfilling my dreams of skating not just for myself but for everyone.
+				<span class="verse">my story</span>
+				<span class="verse">fulfilling my dreams of skating not just for myself</span>
+				<span class="verse">but for everyone.</span>
 			</div>
 		</div>
 	</div>
 	<div class="container vh-50">
 		<div class="vert-middle-block">
 			<div class="monologue">
-				my constellation:<br>
-				My mark on this lake, my canvas, my piece of the world.
+				<span class="verse">my constellation</span>
+				<span class="verse">my mark on this lake,</span>
+				<span class="verse">my canvas</span>
+				<span class="verse">my piece of the world.</span>
 			</div>
 		</div>
 	</div>
